--- a/projects.html
+++ b/projects.html
@@ -164,10 +164,26 @@
 
                   <div class="p-4 flex flex-col md:flex-row justify-between md:items-center border-beige/50 hover:border-beige border-[2px]">
                      <div class="p-2">
-                        <p class="text-beige text-3xl ">Write - Blog</p>
-                        <p class="font-sans text-lg text-white/60">A blog to share your ideas. Built using MERN stack.</p>
+                        <p class="text-beige text-3xl ">Notes</p>
+                        <p class="font-sans text-lg text-white/60">A simple browser based app to store your notes locally.</p>
                      </div>
-                     <a href="https://write-blog-veeru.herokuapp.com/" target=”_blank” class="p-2 text-beige/60 hover:text-beige cursor-pointer">Know more ></a>
+                     <a href="https://imveeru.github.io/react-notes/" target=”_blank” class="p-2 text-beige/60 hover:text-beige cursor-pointer">Know more ></a>
+                  </div>
+
+                  <div class="p-4 flex flex-col md:flex-row justify-between md:items-center border-beige/50 hover:border-beige border-[2px]">
+                     <div class="p-2">
+                        <p class="text-beige text-3xl ">Crypto Track</p>
+                        <p class="font-sans text-lg text-white/60">An app to track the prices of all cryptocurrencies.</p>
+                     </div>
+                     <a href="https://imveeru.github.io/crypto-track/" target=”_blank” class="p-2 text-beige/60 hover:text-beige cursor-pointer">Know more ></a>
+                  </div>
+
+                  <div class="p-4 flex flex-col md:flex-row justify-between md:items-center border-beige/50 hover:border-beige border-[2px]">
+                     <div class="p-2">
+                        <p class="text-beige text-3xl ">Thirukkural</p>
+                        <p class="font-sans text-lg text-white/60">Learn one of the ancient texts in the world. </p>
+                     </div>
+                     <a href="https://imveeru.github.io/thirukkural/" target=”_blank” class="p-2 text-beige/60 hover:text-beige cursor-pointer">Know more ></a>
                   </div>
                   
                </div>
