--- a/projects.html
+++ b/projects.html
@@ -185,6 +185,14 @@
                      </div>
                      <a href="https://imveeru.github.io/thirukkural/" target=”_blank” class="p-2 text-beige/60 hover:text-beige cursor-pointer">Know more ></a>
                   </div>
+
+                  <div class="p-4 flex flex-col md:flex-row justify-between md:items-center border-beige/50 hover:border-beige border-[2px]">
+                     <div class="p-2">
+                        <p class="text-beige text-3xl ">To-Do</p>
+                        <p class="font-sans text-lg text-white/60">Built a simple ToDo app to get familiarized with Redux. </p>
+                     </div>
+                     <a href="https://github.com/imveeru/todo" target=”_blank” class="p-2 text-beige/60 hover:text-beige cursor-pointer">Know more ></a>
+                  </div>
                   
                </div>
             </div> 
@@ -194,7 +202,7 @@
       </div> -->
       <!-- <div class="divider-section wf-section"><img src="https://uploads-ssl.webflow.com/5d934f97854a7e17135843dd/5ecd0b6a06c1235c886c43fb_divider1.svg" alt="" class="divider-0"/></div>
       </div> -->
-      <div class="divider-section wf-section"><img src="https://uploads-ssl.webflow.com/5d934f97854a7e17135843dd/5ecd290e1aadde59b3dddcab_divider2.svg" alt="" class="divider-0"/></div>
+      <!-- <div class="divider-section wf-section"><img src="https://uploads-ssl.webflow.com/5d934f97854a7e17135843dd/5ecd290e1aadde59b3dddcab_divider2.svg" alt="" class="divider-0"/></div>
       <div class="contact-section wf-section">
          <div data-w-id="cdf9dc74-9a2e-999f-353b-280a20b3d1c4" class="container-section flex vertical">
             <div class="text-line7">
@@ -208,9 +216,9 @@
                <p class="body2">Available for new projects</p>
             </div> -->
          </div>
-      </div>
+      </div> -->
       <!-- <div class="pre-footer wf-section"></div> -->
-      <div class="footer-section wf-section">
+      <!-- <div class="footer-section wf-section">
          <div class="footer-div">
             <a data-w-id="08e3fb80-05c9-8c8e-bd25-bc59edf5ad5c" href="/" aria-current="page" class="menu-logo w-inline-block w--current"><img src="./assets/images/ring.svg" alt="logo of veeramanohar" class="logo"/><img src="./assets/images/v.svg" width="26" alt="" class="e-logo"/></a>
             <a href="#top-page-hero" data-w-id="8cc7dd99-8fc9-047d-4c3a-c645656ef326" class="back-top-footer-link w-inline-block">
@@ -235,7 +243,7 @@
          <div class="post-footer-div">
             <div class="text-block">Made by Veeramanohar     |     Inspired from Eliot Besson</div>
          </div>
-      </div>
+      </div> -->
       <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=5d934f97854a7e17135843dd" type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script><script src="https://uploads-ssl.webflow.com/5d934f97854a7e17135843dd/js/webflow.d9dd980fe.js" type="text/javascript"></script><!--[if lte IE 9]><script src="//cdnjs.cloudflare.com/ajax/libs/placeholders/3.0.2/placeholders.min.js"></script><![endif]--> <script type="text/javascript">$('.burger').on('click', toggleScrolling);
          function toggleScrolling() {
            $('html').toggleClass('no-scroll');
