--- a/projects.html
+++ b/projects.html
@@ -141,42 +141,42 @@
       <div id="top-page-hero" data-w-id="0119fc52-5e59-becd-2668-6b8f77b9f024" class="w-[90%] md:w-[78%] p-2 project-grid-section hero wf-section">
          <div>
             <p class="text-beige font-title text-4xl md:text-8xl">PROJECTS</p>
-            <!--Web-->
+            <!--ML-->
             <div class="py-10">
-               <p class="text-white/80 font-title text-2xl md:text-4xl">WEB DEVELOPMENT</p>
+               <p class="text-white/80 font-title text-2xl md:text-4xl">MACHINE LEARNING</p>
                <hr class="opacity-50 mb-2">
                <div class="flex flex-col gap-4 py-5 w-full">
                   
                   <div class="p-4 flex flex-col md:flex-row justify-between md:items-center border-beige/50 hover:border-beige border-[2px]">
                      <div class="p-2">
-                        <p class="text-beige text-3xl ">Elective Management System</p>
-                        <p class="font-sans text-lg text-white/60">A web app based on Agile Methodology to simplify the elective management process.</p>
+                        <p class="text-beige text-3xl ">Salary Prediction</p>
+                        <p class="font-sans text-lg text-white/60">Predict your salary based on your years of experience.</p>
                      </div>
-                     <a href="https://github.com/imveeru/ems" target=”_blank” class="p-2 text-beige/60 hover:text-beige cursor-pointer">Know more ></a>
+                     <a href="https://github.com/imveeru/basic-ml-projects/tree/main/salary%20prediction" target=”_blank” class="p-2 text-beige/60 hover:text-beige cursor-pointer">Know more ></a>
                   </div>
 
                   <div class="p-4 flex flex-col md:flex-row justify-between md:items-center border-beige/50 hover:border-beige border-[2px]">
                      <div class="p-2">
-                        <p class="text-beige text-3xl ">Write - Blog</p>
-                        <p class="font-sans text-lg text-white/60">A blog to share your ideas. Built using MERN stack.</p>
+                        <p class="text-beige text-3xl ">Boston House Price Prediction</p>
+                        <p class="font-sans text-lg text-white/60">Predict price of a house in Boston based on 14 parameters.</p>
                      </div>
-                     <a href="https://write-blog-veeru.herokuapp.com/" target=”_blank” class="p-2 text-beige/60 hover:text-beige cursor-pointer">Know more ></a>
+                     <a href="https://github.com/imveeru/basic-ml-projects/tree/main/boston%20housing" target=”_blank” class="p-2 text-beige/60 hover:text-beige cursor-pointer">Know more ></a>
                   </div>
 
                   <div class="p-4 flex flex-col md:flex-row justify-between md:items-center border-beige/50 hover:border-beige border-[2px]">
                      <div class="p-2">
-                        <p class="text-beige text-3xl ">Notes</p>
-                        <p class="font-sans text-lg text-white/60">A simple browser based app to store your notes locally.</p>
+                        <p class="text-beige text-3xl ">Iris Flower Classification</p>
+                        <p class="font-sans text-lg text-white/60">Classify flowers using its sepal and petal geometry.</p>
                      </div>
-                     <a href="https://imveeru.github.io/react-notes/" target=”_blank” class="p-2 text-beige/60 hover:text-beige cursor-pointer">Know more ></a>
+                     <a href="https://github.com/imveeru/basic-ml-projects/tree/main/Iris%20Flower" target=”_blank” class="p-2 text-beige/60 hover:text-beige cursor-pointer">Know more ></a>
                   </div>
 
                   <div class="p-4 flex flex-col md:flex-row justify-between md:items-center border-beige/50 hover:border-beige border-[2px]">
                      <div class="p-2">
-                        <p class="text-beige text-3xl ">Crypto Track</p>
-                        <p class="font-sans text-lg text-white/60">An app to track the prices of all cryptocurrencies.</p>
+                        <p class="text-beige text-3xl ">Penguin Classification</p>
+                        <p class="font-sans text-lg text-white/60">Classify penguins based on its physical appearance.</p>
                      </div>
-                     <a href="https://imveeru.github.io/crypto-track/" target=”_blank” class="p-2 text-beige/60 hover:text-beige cursor-pointer">Know more ></a>
+                     <a href="https://github.com/imveeru/basic-ml-projects/tree/main/penguin" target=”_blank” class="p-2 text-beige/60 hover:text-beige cursor-pointer">Know more ></a>
                   </div>
 
                   <div class="p-4 flex flex-col md:flex-row justify-between md:items-center border-beige/50 hover:border-beige border-[2px]">
@@ -198,7 +198,7 @@
                </div>
             </div> 
 
-            <!--ML-->
+            <!--Web-->
             <div class="py-10">
                <p class="text-white/80 font-title text-2xl md:text-4xl">WEB DEVELOPMENT</p>
                <hr class="opacity-50 mb-2">
