--- a/index.html
+++ b/index.html
@@ -27,12 +27,13 @@
 </head>
 <body class="">
     <div class="grid grid-cols-12 w-screen h-screen">
-        <div class="bg-red-500 hidden md:block flex flex-col justify-between p-4 h-full">
-            <p>logo</p>
-            <p>logo</p>
+        <div class="bg-red-500 hidden md:flex hidden flex-col items-center justify-between px-4 py-8 h-full">
+            <div>logo</div>
+            <div>logo</div>
         </div>
 
         <div class="col-span-12 md:col-span-11 flex flex-col">
+            <!-- desktop nav -->
             <div class="hidden md:flex bg-yellow-300 basis-1/12 py-8 px-12 flex-row justify-around">
                 <p>Home</p>
                 <p>Home</p>
@@ -40,7 +41,8 @@
                 <p>Home</p>
             </div>
 
-            <div class="md:hidden bg-yellow-300 basis-1/12 py-8 px-12 flex flex-row justify-between">
+            <!-- Mobile nav -->
+            <div class="md:hidden bg-yellow-300 basis-1/12 p-6 flex flex-row justify-between">
                 <p>logo</p>
                 <p>ham</p>
             </div>
