--- a/index.html
+++ b/index.html
@@ -53,8 +53,9 @@
         }
 
         .gradient-bg{
-            background-color: rgb(30, 41, 59);
-            background-image: radial-gradient(at 27% 65%, rgb(24, 24, 27) 0, transparent 70%), radial-gradient(at 100% 0%, rgb(49, 46, 129) 0, transparent 45%);      
+            background-color: rgb(36, 23, 67);
+            background-image: radial-gradient(at 27% 65%, rgb(9, 9, 9) 0, transparent 70%),
+                                radial-gradient(at 100% 0%, rgb(49, 46, 129) 0, transparent 35%);      
         }
 
     </style>
