--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="script.js"></script> 
     <link rel="stylesheet" href="style.css">
+    <script src="https://cdn.jsdelivr.net/npm/pace-js@latest/pace.min.js"></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/pace-js@latest/pace-theme-default.min.css">
+
 
     <title>Veeramanohar</title>
 
@@ -150,7 +153,7 @@
                       </p>
                       
                       <!-- Categories - only for PC -->
-                      <div class="px-6 md:px-16 md:text-xl text-base mt-8 mb-4 gap-x-4 font-title w-full hidden md:grid grid-cols-2 md:grid-cols-4 items-center justify-between ">
+                      <div class="px-6 md:px-16 md:text-xl text-base mt-8 mb-4 gap-x-4 font-title w-full hidden lg:grid grid-cols-2 md:grid-cols-4 items-center justify-between ">
                           <p class="text-center cursor-pointer border border-white/40 hover:border-highlight hover:text-black hover:bg-highlight p-4">Web Development</p>
                           <p class="text-center cursor-pointer border border-white/40 hover:border-highlight hover:text-black hover:bg-highlight p-4">Design</p>
                           <p class="text-center cursor-pointer border border-white/40 hover:border-highlight hover:text-black hover:bg-highlight p-4">Artificial Intelligence</p>
@@ -175,7 +178,9 @@
                         </a>
                       </p>
 
-                      <p></p>
+                      <p class="px-6 md:px-16 text-justify font-content text-base">
+                        An ambitious undergraduate student with a year of software engineering internship experience and three years of freelance work, bringing a blend of technical expertise and leadership skills. Demonstrated strong organizational and interpersonal abilities through team management, coordination of university events, and leadership roles in clubs. Currently involved in cutting-edge research projects focusing on Computational Creativity, Evolutionary Computation, Genetic Algorithms, Generative AI, Artificial Intelligence, Data Analysis, and Machine Learning. Actively seeking an entry-level position to contribute to a dynamic team and further develop skills. Let's connect to explore exciting opportunities in the world of technology.
+                      </p>
                       
                   </div>
                 </div>
