--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="script.js"></script> 
     <link rel="stylesheet" href="style.css">
-    <script src="https://cdn.jsdelivr.net/npm/pace-js@latest/pace.min.js"></script>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/pace-js@latest/pace-theme-default.min.css">
+    <!-- <script src="https://cdn.jsdelivr.net/npm/pace-js@latest/pace.min.js"></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/pace-js@latest/pace-theme-default.min.css"> -->
 
 
     <title>Veeramanohar</title>
@@ -154,17 +154,20 @@
                       
                       <!-- Categories - only for PC -->
                       <div class="px-6 md:px-16 md:text-xl text-base mt-8 mb-4 gap-x-4 font-title w-full hidden lg:grid grid-cols-2 md:grid-cols-4 items-center justify-between ">
-                          <p class="text-center cursor-pointer border border-white/40 hover:border-highlight hover:text-black hover:bg-highlight p-4">Web Development</p>
-                          <p class="text-center cursor-pointer border border-white/40 hover:border-highlight hover:text-black hover:bg-highlight p-4">Design</p>
-                          <p class="text-center cursor-pointer border border-white/40 hover:border-highlight hover:text-black hover:bg-highlight p-4">Artificial Intelligence</p>
-                          <p class="text-center cursor-pointer border border-white/40 hover:border-highlight hover:text-black hover:bg-highlight p-4">Research</p>
+                          <p class="text-center cursor-pointer border border-white/40 hover:border-highlight hover:text-black hover:bg-highlight rounded-full p-4">Web Development</p>
+                          <p class="text-center cursor-pointer border border-white/40 hover:border-highlight hover:text-black hover:bg-highlight rounded-full p-4">Design</p>
+                          <p class="text-center cursor-pointer border border-white/40 hover:border-highlight hover:text-black hover:bg-highlight rounded-full p-4">Artificial Intelligence</p>
+                          <p class="text-center cursor-pointer border border-white/40 hover:border-highlight hover:text-black hover:bg-highlight rounded-full p-4">Research</p>
                       </div>
                     
-                      <div class="flex flex-row gap-x-2 overflow-y-scroll">
+                      <div class="flex flex-row gap-x-2 overflow-y-scroll justify-center items-center">
+                        <div class="w-[90%] md:w-[30%] border border-white/40 ">
+                          <img src="/assets/images/project_cover.jpg" class="p-2">
+                          <p class="font-title cursor-pointer p-2">Title</p>
+                        </div>
+                        <!-- <img src="/assets/images/fire.webp"/>
                         <img src="/assets/images/fire.webp"/>
-                        <img src="/assets/images/fire.webp"/>
-                        <img src="/assets/images/fire.webp"/>
-                        <img src="/assets/images/fire.webp"/>
+                        <img src="/assets/images/fire.webp"/> -->
                       </div>
                   </div>
                 </div>
