--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
         <div class="col-span-12 md:col-span-11 flex flex-col">
             <!-- desktop nav -->
-            <div class="hidden font-nav fixed-row md:flex text-white/50  border-b border-white/20 basis-1/12 py-8 px-12
+            <div class="hidden  font-nav fixed-row md:flex text-white/50  border-b border-white/20 basis-1/12 py-8 px-12
                         bg-gray-800 bg-opacity-10 bg-clip-padding backdrop-filter backdrop-blur-md bg-opacity-20 flex-row justify-around">
                 <a class="hover:text-white hover:cursor-pointer" href="#hero">HOME</a>
                 <a class="hover:text-white hover:cursor-pointer" href="#skills">SKILLS</a>
@@ -144,7 +144,7 @@
                 </div>
 
                 <!-- Selected work -->
-                <div id="work" class="cursor-default tracking-tight w-full h-[50vh] mb-8 md:h-full text-white flex flex-col items-center justify-center">
+                <div id="work" class="cursor-default tracking-tight w-full mb-8 md:h-full text-white flex flex-col items-center justify-center">
                   <div class="flex-1 font-sans font-bold text-7xl w-full">
                       <p class="px-6 md:px-16 mb-3 md:text-4xl text-2xl font-title">Selected Work
                         <a class="ml-2 cursor-pointer text-base text-white/40 hover:text-highlight hover:decoration-underline  inline ">
@@ -160,14 +160,31 @@
                           <p class="text-center cursor-pointer border border-white/40 hover:border-highlight hover:text-black hover:bg-highlight rounded-full p-4">Research</p>
                       </div>
                     
-                      <div class="flex flex-row gap-x-2 overflow-y-scroll justify-center items-center">
-                        <div class="w-[90%] md:w-[30%] border border-white/40 ">
-                          <img src="/assets/images/project_cover.jpg" class="p-2">
-                          <p class="font-title cursor-pointer p-2">Title</p>
+                      <div class="px-6 md:px-16 flex flex-row gap-x-4 overflow-y-scroll justify-center items-center">
+                        <!-- <div class="group relative w-[90%] md:w-[25%] rounded">
+                          <img src="/assets/images/project_cover.jpg" class="object-cover grayscale group-hover:grayscale-0">
+                          <div class="absolute left-0 bottom-0 p-4 pt-16 cursor-pointer
+                                      bg-gradient-to-t from-black from-30% to-transparent w-full
+                                      ">
+                            <p class="font-title text-6xl">Title</p>
+                            <p class="font-content text-base">AI based AutoML app</p>
+                          </div>
+                        </div> -->
+
+                        <div class="group min-w-[300px] md:max-w-[30%] border border-white/40 p-4 mt-8">
+                          <img src="/assets/images/project_cover.jpg" class="grayscale group-hover:grayscale-0">
+                          <div class="flex flex-row justify-between mt-2 md:mt-4 items-center">
+                            <div class="cursor-pointer">
+                              <p class="font-title text-2xl md:text-5xl">IntelliML</p>
+                              <p class="font-content text-white/40 text-base">AI based AutoML app</p>
+                            </div>
+                            <div class="cursor-pointer">
+                              <svg class="w-10 fill-white/40" xmlns="http://www.w3.org/2000/svg" shape-rendering="geometricPrecision" text-rendering="geometricPrecision" image-rendering="optimizeQuality" fill-rule="evenodd" clip-rule="evenodd" viewBox="0 0 512 351.67"><path fill-rule="nonzero" d="M0 0h512v23.91H0V0zm0 327.76h512v23.91H0v-23.91zm0-163.88h512v23.91H0v-23.91z"/></svg>
+                            </div>
+                          </div>
                         </div>
-                        <!-- <img src="/assets/images/fire.webp"/>
-                        <img src="/assets/images/fire.webp"/>
-                        <img src="/assets/images/fire.webp"/> -->
+
+                        
                       </div>
                   </div>
                 </div>
