--- a/index.html
+++ b/index.html
@@ -153,14 +153,14 @@
                       </p>
                       
                       <!-- Categories - only for PC -->
-                      <div class="px-6 md:px-16 md:text-xl text-base mt-8 mb-4 gap-x-4 font-title w-full hidden lg:grid grid-cols-2 md:grid-cols-4 items-center justify-between ">
+                      <div class="px-6 md:px-16 md:text-xl text-base mt-6 mb-4 gap-x-4 font-title w-full hidden lg:grid grid-cols-2 md:grid-cols-4 items-center justify-between ">
                           <p class="text-center cursor-pointer border border-white/40 hover:border-highlight hover:text-black hover:bg-highlight rounded-full p-4">Web Development</p>
                           <p class="text-center cursor-pointer border border-white/40 hover:border-highlight hover:text-black hover:bg-highlight rounded-full p-4">Design</p>
                           <p class="text-center cursor-pointer border border-white/40 hover:border-highlight hover:text-black hover:bg-highlight rounded-full p-4">Artificial Intelligence</p>
                           <p class="text-center cursor-pointer border border-white/40 hover:border-highlight hover:text-black hover:bg-highlight rounded-full p-4">Research</p>
                       </div>
                     
-                      <div class="px-6 md:px-16 flex flex-row gap-x-4 overflow-y-scroll justify-center items-center">
+                      <div class="px-6 md:px-16 flex flex-col md:flex-row gap-x-4 overflow-y-hidden justify-center items-center">
                         <!-- <div class="group relative w-[90%] md:w-[25%] rounded">
                           <img src="/assets/images/project_cover.jpg" class="object-cover grayscale group-hover:grayscale-0">
                           <div class="absolute left-0 bottom-0 p-4 pt-16 cursor-pointer
@@ -170,6 +170,45 @@
                             <p class="font-content text-base">AI based AutoML app</p>
                           </div>
                         </div> -->
+
+                        <div class="group min-w-[300px] md:max-w-[30%] border border-white/40 p-4 mt-8">
+                          <img src="/assets/images/project_cover.jpg" class="grayscale group-hover:grayscale-0">
+                          <div class="flex flex-row justify-between mt-2 md:mt-4 items-center">
+                            <div class="cursor-pointer">
+                              <p class="font-title text-2xl md:text-5xl">IntelliML</p>
+                              <p class="font-content text-white/40 text-base">AI based AutoML app</p>
+                            </div>
+                            <div class="cursor-pointer">
+                              <svg class="w-10 fill-white/40" xmlns="http://www.w3.org/2000/svg" shape-rendering="geometricPrecision" text-rendering="geometricPrecision" image-rendering="optimizeQuality" fill-rule="evenodd" clip-rule="evenodd" viewBox="0 0 512 351.67"><path fill-rule="nonzero" d="M0 0h512v23.91H0V0zm0 327.76h512v23.91H0v-23.91zm0-163.88h512v23.91H0v-23.91z"/></svg>
+                            </div>
+                          </div>
+                        </div>
+
+                        <div class="group min-w-[300px] md:max-w-[30%] border border-white/40 p-4 mt-8">
+                          <img src="/assets/images/project_cover.jpg" class="grayscale group-hover:grayscale-0">
+                          <div class="flex flex-row justify-between mt-2 md:mt-4 items-center">
+                            <div class="cursor-pointer">
+                              <p class="font-title text-2xl md:text-5xl">IntelliML</p>
+                              <p class="font-content text-white/40 text-base">AI based AutoML app</p>
+                            </div>
+                            <div class="cursor-pointer">
+                              <svg class="w-10 fill-white/40" xmlns="http://www.w3.org/2000/svg" shape-rendering="geometricPrecision" text-rendering="geometricPrecision" image-rendering="optimizeQuality" fill-rule="evenodd" clip-rule="evenodd" viewBox="0 0 512 351.67"><path fill-rule="nonzero" d="M0 0h512v23.91H0V0zm0 327.76h512v23.91H0v-23.91zm0-163.88h512v23.91H0v-23.91z"/></svg>
+                            </div>
+                          </div>
+                        </div>
+
+                        <div class="group min-w-[300px] md:max-w-[30%] border border-white/40 p-4 mt-8">
+                          <img src="/assets/images/project_cover.jpg" class="grayscale group-hover:grayscale-0">
+                          <div class="flex flex-row justify-between mt-2 md:mt-4 items-center">
+                            <div class="cursor-pointer">
+                              <p class="font-title text-2xl md:text-5xl">IntelliML</p>
+                              <p class="font-content text-white/40 text-base">AI based AutoML app</p>
+                            </div>
+                            <div class="cursor-pointer">
+                              <svg class="w-10 fill-white/40" xmlns="http://www.w3.org/2000/svg" shape-rendering="geometricPrecision" text-rendering="geometricPrecision" image-rendering="optimizeQuality" fill-rule="evenodd" clip-rule="evenodd" viewBox="0 0 512 351.67"><path fill-rule="nonzero" d="M0 0h512v23.91H0V0zm0 327.76h512v23.91H0v-23.91zm0-163.88h512v23.91H0v-23.91z"/></svg>
+                            </div>
+                          </div>
+                        </div>
 
                         <div class="group min-w-[300px] md:max-w-[30%] border border-white/40 p-4 mt-8">
                           <img src="/assets/images/project_cover.jpg" class="grayscale group-hover:grayscale-0">
