--- a/index.html
+++ b/index.html
@@ -243,9 +243,27 @@
                         </a>
                       </p>
 
-                      <p class="px-6 md:px-16 text-justify font-content text-lg">
-                        An ambitious undergraduate student with a year of software engineering internship experience and three years of freelance work, bringing a blend of technical expertise and leadership skills. Demonstrated strong organizational and interpersonal abilities through team management, coordination of university events, and leadership roles in clubs. Currently involved in cutting-edge research projects focusing on Computational Creativity, Evolutionary Computation, Genetic Algorithms, Generative AI, Artificial Intelligence, Data Analysis, and Machine Learning. Actively seeking an entry-level position to contribute to a dynamic team and further develop skills. Let's connect to explore exciting opportunities in the world of technology.
-                      </p>
+                      <div class="px-6 md:px-16 md:grid grid-cols-12 gap-16 mt-3 md:mt-8">
+
+                        <img src="/assets/images/me_1000.jpg" class="col-span-3">
+
+                        <!-- <p class="text-justify font-content text-base md:text-xl col-span-9">
+                          An ambitious undergraduate student with a year of software engineering internship experience and three years of freelance work, bringing a blend of technical expertise and leadership skills. Demonstrated strong organizational and interpersonal abilities through team management, coordination of university events, and leadership roles in clubs. Currently involved in cutting-edge research projects focusing on Computational Creativity, Evolutionary Computation, Genetic Algorithms, Generative AI, Artificial Intelligence, Data Analysis, and Machine Learning. Actively seeking an entry-level position to contribute to a dynamic team and further develop skills. Let's connect to explore exciting opportunities in the world of technology.
+                        </p> -->
+
+                        <div class="col-span-9 font-content text-base md:text-2xl mt-3 md:mt-1 uppercase tracking-normal text-justify">
+                          <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dol
+                            <span><img class="inline h-8 mx-1 md:my-4 rounded-full" src="/assets/images/jisoo mock.jpg"</span>
+                            delectus quia libero aliquid temporibus molestias! Qui ratione
+                            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dol
+                            <span><img class="inline h-8 mx-1 md:my-4 rounded-full" src="/assets/images/jisoo mock.jpg"</span>
+                            delectus quia libero aliquid temporibus
+                            <span><img class="inline h-8 mx-1 md:my-4 rounded-full" src="/assets/images/jisoo mock.jpg"</span>
+                            mo Qui ratione
+                            delectus quia libero aliquid temporibus molestias! Qui ratione</p>
+                        </div>
+
+                      </div>
                       
                   </div>
                 </div>
