--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
                 <div id="work" class="cursor-default tracking-tight my-16 w-full h-auto text-white flex flex-col items-center justify-center">
                   <div class="flex-1 font-sans font-bold text-7xl w-full">
                       <p class="px-6 md:px-16 mb-3 md:text-4xl text-2xl font-title">About me
-                        <a class="ml-2 cursor-pointer text-base text-white/40 hover:text-highlight hover:decoration-underline  inline ">
+                        <a class="ml-2 cursor-pointer text-base text-highlight hover:underline inline ">
                           Know more >
                         </a>
                       </p>
@@ -251,16 +251,23 @@
                           An ambitious undergraduate student with a year of software engineering internship experience and three years of freelance work, bringing a blend of technical expertise and leadership skills. Demonstrated strong organizational and interpersonal abilities through team management, coordination of university events, and leadership roles in clubs. Currently involved in cutting-edge research projects focusing on Computational Creativity, Evolutionary Computation, Genetic Algorithms, Generative AI, Artificial Intelligence, Data Analysis, and Machine Learning. Actively seeking an entry-level position to contribute to a dynamic team and further develop skills. Let's connect to explore exciting opportunities in the world of technology.
                         </p> -->
 
-                        <div class="col-span-9 font-content text-base md:text-2xl mt-3 md:mt-1 uppercase tracking-normal text-justify">
-                          <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dol
-                            <span><img class="inline h-8 mx-1 md:my-4 rounded-full" src="/assets/images/jisoo mock.jpg"</span>
-                            delectus quia libero aliquid temporibus molestias! Qui ratione
+                        <!-- flex flex-col justify-between -->
+                        <div class=" col-span-9 font-content text-base md:text-2xl mt-3 md:mt-0 tracking-normal text-justify">
+                          
+                            <p class="leading-[3.5rem]">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dol
+                            <span><img class="inline h-10 mx-1 rounded-full" src="/assets/images/jisoo mock.jpg"</span>
+                            delectus quia libero <span><img class="inline h-10 mx-1 rounded-full" src="/assets/images/jisoo mock.jpg"</span>
+                             aliquid temporibus molestias! Qui ratione
                             Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dol
-                            <span><img class="inline h-8 mx-1 md:my-4 rounded-full" src="/assets/images/jisoo mock.jpg"</span>
+                            <span><img class="inline h-10 mx-1 rounded-full" src="/assets/images/jisoo mock.jpg"</span>
                             delectus quia libero aliquid temporibus
-                            <span><img class="inline h-8 mx-1 md:my-4 rounded-full" src="/assets/images/jisoo mock.jpg"</span>
-                            mo Qui ratione
+                            <span><img class="inline h-10 mx-1 rounded-full" src="/assets/images/jisoo mock.jpg"</span>
+                            mo Qui ratione 
+                            <span><img class="inline h-10 mx-1 rounded-full" src="/assets/images/jisoo mock.jpg"</span>
                             delectus quia libero aliquid temporibus molestias! Qui ratione</p>
+
+                            <!-- <a class="hover:text-highlight py-4 cursor-pointer">Wanna know more about me?</a> -->
+
                         </div>
 
                       </div>
