--- a/index.html
+++ b/index.html
@@ -10,8 +10,6 @@
     <link rel="stylesheet" href="style.css">
     <!-- <script src="https://cdn.jsdelivr.net/npm/pace-js@latest/pace.min.js"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/pace-js@latest/pace-theme-default.min.css"> -->
-    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 
     <title>Veeramanohar</title>
 
@@ -59,15 +57,15 @@
                         <img class="inline h-5 mr-2 ml-2" src="/assets/images/waving-hand.webp"/>Hi, i'M VeeRAMAnoHAR
                       </span> 
                       <div class="tracking-tight text-5xl lg:text-9xl">
-                        <p>A <span class="text-highlight">Creative</span></p>
-                        <p>Developer &</p>
-                        <p><span class="text-highlight">Tech</span> Enthusiast.</p>
+                        <p class="">A <span class="text-highlight">Creative</span></p>
+                        <p class="">Developer &</p>
+                        <p class=""><span class="text-highlight">Tech</span> Enthusiast.</p>
                       </div>
                     </div>
                 </div>
 
                 <!-- Marquee -->
-                <div class="text-white/80 relative w-full flex flex-row border-t-2 border-b-2 bg-black/30 md:bg-black/0 border-highlight overflow-x-hidden mb-24 md:mb-44 tracking-tight">
+                <div data-aos="fade-up" class="text-white/80 relative w-full flex flex-row border-t-2 border-b-2 bg-black/30 md:bg-black/0 border-highlight overflow-x-hidden mb-24 md:mb-44 tracking-tight">
                   
                   <div class="py-3 md:py-6 animate-marquee whitespace-nowrap text-white">
                       <span class="mx-4 text-4xl">Desire</span>
@@ -279,7 +277,7 @@
                 </div>
 
                 <!-- About Me -->
-                <div id="work" class="cursor-default tracking-tight my-16 w-full h-auto text-white flex flex-col items-center justify-center">
+                <div id="about" class="cursor-default tracking-tight my-16 w-full h-auto text-white flex flex-col items-center justify-center">
                   <div class="flex-1 font-sans font-bold text-7xl w-full">
                       <p class="px-6 md:px-16 mb-3 md:text-4xl text-2xl font-title">About me
                         <a class="ml-2 cursor-pointer text-base text-highlight hover:underline inline ">
@@ -320,7 +318,7 @@
                 </div>
 
                 <!-- Contact -->
-                <div id="work" class="mb-4 my-16 md:my-32 cursor-default tracking-tight w-full h-auto text-white flex flex-col items-center justify-center">
+                <div id="contact" class="mb-4 my-16 md:my-32 cursor-default tracking-tight w-full h-auto text-white flex flex-col items-center justify-center">
                   <div class="px-6 md:px-16 grid md:grid-cols-3 grid-cols-2 grid-row-2 md:grid-row-1 w-full">
                     
                     <div class="p-4 flex flex-col gap-y-4">
@@ -408,5 +406,7 @@
 
         </div>
     </div>
+
 </body>
+
 </html>
