--- a/index.html
+++ b/index.html
@@ -49,25 +49,25 @@
 
             <!-- Main content -->
             <div class="scrollable-section">
-
+                <div class="cursor"></div>
                 <!-- Hero section -->
                 <div id="hero" class="cursor-default h-[48dvh] md:h-[90dvh] text-white flex flex-col px-6 md:px-16 items-center justify-center">                    
                     <div class="font-title font-bold flex flex-col gap-y-4">                      
                       <span class="tracking-widest font-special text-sm md:text-lg text-white text-left">
                         <img class="inline h-5 mr-2 ml-2" src="/assets/images/waving-hand.webp"/>Hi, i'M VeeRAMAnoHAR
                       </span> 
-                      <div class="tracking-tight text-5xl lg:text-9xl">
+                      <section class="tracking-tight text-5xl lg:text-9xl">
                         <p class="">A <span class="text-highlight">Creative</span></p>
                         <p class="">Developer &</p>
                         <p class=""><span class="text-highlight">Tech</span> Enthusiast.</p>
-                      </div>
+                      </section>
                     </div>
                 </div>
 
                 <!-- Marquee -->
-                <div data-aos="fade-up" class="text-white/80 relative w-full flex flex-row border-t-2 border-b-2 bg-black/30 md:bg-black/0 border-highlight overflow-x-hidden mb-24 md:mb-44 tracking-tight">
+                <div class="group text-white/80 cursor-default relative w-full flex flex-row border-t-2 border-b-2 bg-black/30 md:bg-black/0 border-highlight overflow-x-hidden mb-24 md:mb-44 tracking-tight">
                   
-                  <div class="py-3 md:py-6 animate-marquee whitespace-nowrap text-white">
+                  <div class="py-3 md:py-6 animate-marquee group-hover:pause whitespace-nowrap text-white">
                       <span class="mx-4 text-4xl">Desire</span>
                       <span class="text-highlight mx-4 text-4xl">✱</span>
                       <span class="mx-4 text-4xl">Design</span>
@@ -76,7 +76,7 @@
                       <span class="text-highlight mx-4 text-4xl">✱</span>
                   </div>
 
-                  <div class="py-3 md:py-6 animate-marquee whitespace-nowrap text-white">
+                  <div class="py-3 md:py-6 animate-marquee group-hover:pause whitespace-nowrap text-white">
                     <span class="mx-4 text-4xl">Desire</span>
                     <span class="text-highlight mx-4 text-4xl">✱</span>
                     <span class="mx-4 text-4xl">Design</span>
@@ -85,7 +85,7 @@
                     <span class="text-highlight mx-4 text-4xl">✱</span>
                   </div>
 
-                  <div class="py-3 md:py-6 animate-marquee whitespace-nowrap text-white">
+                  <div class="py-3 md:py-6 animate-marquee group-hover:pause whitespace-nowrap text-white">
                     <span class="mx-4 text-4xl">Desire</span>
                     <span class="text-highlight mx-4 text-4xl">✱</span>
                     <span class="mx-4 text-4xl">Design</span>
