--- a/index.html
+++ b/index.html
@@ -8,15 +8,34 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="script.js"></script> 
     <link rel="stylesheet" href="style.css">
-    <!-- <script src="https://cdn.jsdelivr.net/npm/pace-js@latest/pace.min.js"></script>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/pace-js@latest/pace-theme-default.min.css"> -->
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.3/TweenMax.min.js"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/2.0.2/anime.min.js"></script>
 
     <title>Veeramanohar</title>
 
 </head>
 <body class="gradient-bg font-title">
+    
+    <!-- Custom cursor -->
+    <div class="cursor"></div>
+
+    <!-- Pre loader -->
+    <div class="titles text-white text-9xl">
+      <div class="title title-1"><h1>Desire</h1></div>
+      <div class="title title-2"><h1>Design</h1></div>
+      <div class="title title-3"><h1>Develop</h1></div>
+    </div>
+    <ul class="blocks">
+      <li class="block-1 block"></li>
+      <li class="block-2 block"></li>
+      <li class="block-3 block"></li>
+      <li class="block-4 block"></li>
+      <li class="block-5 block"></li>
+      <li class="block-6 block"></li>
+    </ul>
+
     <!-- overall container -->
-    <div class="grid grid-cols-12">
+    <div class="main-container grid grid-cols-12">
         <!-- logo and copyright -->
         <div class="fixed-column overflow-y-hidden text-white border-r border-white/20 hidden md:flex hidden flex-col items-center justify-between px-4 py-8 h-full">
             <div><img class="w-16 opacity-70 hover:opacity-100 hover:fill-highlight" src="/assets/images/logo.svg"/></div>
@@ -49,7 +68,7 @@
 
             <!-- Main content -->
             <div class="scrollable-section">
-                <div class="cursor"></div>
+        
                 <!-- Hero section -->
                 <div id="hero" class="cursor-default h-[48dvh] md:h-[90dvh] text-white flex flex-col px-6 md:px-16 items-center justify-center">                    
                     <div class="font-title font-bold flex flex-col gap-y-4">                      
@@ -407,6 +426,70 @@
         </div>
     </div>
 
+    <!-- preloader -->
+    <script>
+      TweenMax.staggerFrom(
+        ".titles > div",
+        0.8,
+        {
+          x: "-60",
+          ease: Power3.easeInOut,
+          opacity: "0",
+        },
+        2
+      );
+
+      TweenMax.staggerTo(
+        ".titles > div",
+        0.8,
+        {
+          x: "60",
+          ease: Power3.easeInOut,
+          delay: 1.2,
+          opacity: "0",
+        },
+        2
+      );
+      TweenMax.staggerFrom(
+        "li",
+        3,
+        {
+          x: "-1600",
+          delay: 4.2,
+          ease: Expo.easeInOut,
+        },
+        0.16
+      );
+
+      TweenMax.staggerTo(
+        "li",
+        2.6,
+        {
+          x: "1600",
+          delay: 6.8,
+          ease: Expo.easeInOut,
+        },
+        0.2
+      );
+
+      // sourcery skip: avoid-using-var
+      var textWrapper = document.querySelector(".main-container");
+
+      anime.timeline().add({
+        targets: ".main-containefa-rotate-180",
+        opacity: [0, 1],
+        translateY: [80, 0],
+        translateZ: 0,
+        easing: "easeOutExpo",
+        duration: 2000,
+        delay: (el, i) => 8400 + 40 * i,
+      });
+
+
+    </script>
+
+
 </body>
+
 
 </html>
