--- a/index.html
+++ b/index.html
@@ -11,28 +11,13 @@
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.3/TweenMax.min.js"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/2.0.2/anime.min.js"></script>
 
+    <script src="https://code.jquery.com/jquery-3.7.0.min.js" integrity="sha256-2Pmvv0kuTBOenSvLm6bvfBSSHrUJ+3A7x6P5Ebd07/g=" crossorigin="anonymous"></script>
+
     <title>Veeramanohar</title>
 
 </head>
 <body class="gradient-bg font-title">
     
-    <!-- Custom cursor -->
-    <div class="cursor"></div>
-
-    <!-- Pre loader -->
-    <div class="titles text-white text-9xl">
-      <div class="title title-1"><h1>Desire</h1></div>
-      <div class="title title-2"><h1>Design</h1></div>
-      <div class="title title-3"><h1>Develop</h1></div>
-    </div>
-    <ul class="blocks">
-      <li class="block-1 block"></li>
-      <li class="block-2 block"></li>
-      <li class="block-3 block"></li>
-      <li class="block-4 block"></li>
-      <li class="block-5 block"></li>
-      <li class="block-6 block"></li>
-    </ul>
 
     <!-- overall container -->
     <div class="main-container grid grid-cols-12">
@@ -425,6 +410,27 @@
 
         </div>
     </div>
+    
+    <!-- Custom cursor -->
+    <div class="cursor"></div>
+
+    <!-- Pre loader -->
+    <div id="container">
+      <div class="titles text-white text-9xl">
+        <div class="title title-1"><h1>Desire</h1></div>
+        <div class="title title-2"><h1>Design</h1></div>
+        <div class="title title-3"><h1>Develop</h1></div>
+      </div>
+      <ul class="blocks">
+        <li class="block-1 block"></li>
+        <li class="block-2 block"></li>
+        <li class="block-3 block"></li>
+        <li class="block-4 block"></li>
+        <li class="block-5 block"></li>
+        <li class="block-6 block"></li>
+      </ul>
+    </div>
+
 
     <!-- preloader -->
     <script>
@@ -451,7 +457,7 @@
         2
       );
       TweenMax.staggerFrom(
-        "li",
+        ".blocks > li",
         3,
         {
           x: "-1600",
@@ -462,7 +468,7 @@
       );
 
       TweenMax.staggerTo(
-        "li",
+        ".blocks > li",
         2.6,
         {
           x: "1600",
@@ -476,7 +482,7 @@
       var textWrapper = document.querySelector(".main-container");
 
       anime.timeline().add({
-        targets: ".main-containefa-rotate-180",
+        targets: ".main-container",
         opacity: [0, 1],
         translateY: [80, 0],
         translateZ: 0,
@@ -484,6 +490,8 @@
         duration: 2000,
         delay: (el, i) => 8400 + 40 * i,
       });
+
+      $('#container').delay(9400).hide(0); 
 
 
     </script>
