--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <!-- desktop nav -->
             <div class="hidden  font-nav fixed-row md:flex text-white/50  border-b border-white/20 basis-1/12 py-8 px-12
                         bg-gray-800 bg-opacity-10 bg-clip-padding backdrop-filter backdrop-blur-md bg-opacity-20 flex-row justify-around">
-                <a class="hover:text-white hover:cursor-pointer" href="#hero">HOME</a>
+                <a class="hover:text-white hover:cursor-pointer" href="./index.html">HOME</a>
                 <a class="hover:text-white hover:cursor-pointer" href="#skills">SKILLS</a>
                 <a class="hover:text-white hover:cursor-pointer" href="#work">WORK</a>
                 <a class="hover:text-white hover:cursor-pointer" href="#about">ABOUT</a>
@@ -196,7 +196,7 @@
                 <div id="work" class="cursor-default tracking-tight w-full mb-8 md:h-full text-white flex flex-col items-center justify-center">
                   <div class="flex-1 font-bold text-7xl w-full">
                       <p class="px-6 md:px-16 mb-3 md:text-4xl text-2xl font-title">Selected Work
-                        <a class="ml-2 cursor-pointer text-base text-highlight hover:underline inline ">
+                        <a href="./projects.html" class="ml-2 cursor-pointer text-base text-highlight hover:underline inline ">
                           View All Works >
                         </a>
                       </p>
