--- a/about.html
+++ b/about.html
@@ -25,7 +25,7 @@
 
     <script src="https://code.jquery.com/jquery-3.7.0.min.js" integrity="sha256-2Pmvv0kuTBOenSvLm6bvfBSSHrUJ+3A7x6P5Ebd07/g=" crossorigin="anonymous"></script>
 
-    <title>Veeramanohar - Projects</title>
+    <title>Veeramanohar - About</title>
 
 </head>
 <body class="gradient-bg font-title">
