--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
 
     <script src="https://code.jquery.com/jquery-3.7.0.min.js" integrity="sha256-2Pmvv0kuTBOenSvLm6bvfBSSHrUJ+3A7x6P5Ebd07/g=" crossorigin="anonymous"></script>
 
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+
     <title>Veeramanohar</title>
 
 </head>
@@ -57,7 +59,7 @@
                 <!-- Hero section -->
                 <div id="hero" class="cursor-default h-[48dvh] md:h-[90dvh] text-white flex flex-col px-6 md:px-16 items-center justify-center">                    
                     <div class="font-title font-bold flex flex-col gap-y-4">                      
-                      <span class="tracking-widest font-special text-sm md:text-lg text-white text-left">
+                      <span data-aos="fade-in" class="tracking-widest font-special text-sm md:text-lg text-white text-left">
                         <img class="inline h-5 mr-2 ml-2" src="/assets/images/waving-hand.webp"/>Hi, i'M VeeRAMAnoHAR
                       </span> 
                       <section class="tracking-tight text-5xl lg:text-9xl">
@@ -416,10 +418,10 @@
 
     <!-- Pre loader -->
     <div id="container">
-      <div class="titles text-white text-4xl md:text-9xl">
-        <div class="title title-1"><h1>Desire<span class="text-transparent bg-clip-text bg-gradient-to-r from-fuchsia-500 via-red-600 to-orange-400 text-lg md:text-2xl">⬤</span></h1></div>
-        <div class="title title-2"><h1>Design<span class="text-transparent bg-clip-text bg-[conic-gradient(at_left,_var(--tw-gradient-stops))] from-yellow-200 via-red-500 to-fuchsia-500 text-lg md:text-2xl">⬤</span></h1></div>
-        <div class="title title-3"><h1>Develop<span class="text-transparent bg-clip-text bg-[radial-gradient(ellipse_at_bottom,_var(--tw-gradient-stops))] from-amber-200 via-violet-600 to-sky-900 text-lg md:text-2xl">⬤</span></h1></div>
+      <div class="titles cursor-default text-white text-4xl md:text-9xl">
+        <div class="title title-1"><h1>Desire<span class="text-highlight text-lg md:text-2xl">⬤</span></h1></div>
+        <div class="title title-2"><h1>Design<span class="text-highlight text-lg md:text-2xl">⬤</span></h1></div>
+        <div class="title title-3"><h1>Develop<span class="text-highlight text-lg md:text-2xl">⬤</span></h1></div>
       </div>
       <ul class="blocks">
         <li class="block-1 block"></li>
@@ -489,13 +491,20 @@
         translateZ: 0,
         easing: "easeOutExpo",
         duration: 1000,
-        delay: (el, i) => 8000 + 40 * i,
+        delay: (el, i) => 7000 + 40 * i,
       });
 
       $('#container').delay(8500).hide(0); 
       $('#main-container').removeClass("hidden");
       $('#main-container').addClass("grid");
 
+    </script>
+    
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    <script>
+      AOS.init({
+        startEvent: 'load'
+      });
     </script>
 
 
