--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
 
         <div class="col-span-12 md:col-span-11 flex flex-col">
             <!-- desktop nav -->
-            <div class="hidden  font-nav fixed-row md:flex text-white/50  border-b border-white/20 basis-1/12 py-8 px-12
-                        bg-gray-800 bg-opacity-10 bg-clip-padding backdrop-filter backdrop-blur-md bg-opacity-20 flex-row justify-around">
+            <div class="hidden z-[99999999999999] font-nav fixed-row md:flex text-white/50  border-b border-white/20 basis-1/12 py-8 px-12
+                        bg-gray-800 bg-opacity-10 bg-clip-padding backdrop-filter backdrop-blur-kg bg-opacity-20 flex-row justify-around">
                 <a class="hover:text-white hover:cursor-pointer" href="./index.html">HOME</a>
                 <a class="hover:text-white hover:cursor-pointer" href="#skills">SKILLS</a>
                 <a class="hover:text-white hover:cursor-pointer" href="#work">WORK</a>
@@ -49,7 +49,7 @@
             </div>
 
             <!-- Mobile nav -->
-            <div class="md:hidden fixed-row border-b border-white/20 text-white basis-1/12 p-4 flex flex-row justify-between">
+            <div class="md:hidden z-[99999999999999] fixed-row border-b border-white/20 text-white basis-1/12 p-4 flex flex-row justify-between">
                 <div><img class="w-12 opacity-70 hover:opacity-100 hover:fill-highlight" src="/assets/images/logo.svg"/></div>
                 <svg class="w-5 fill-white/70" xmlns="http://www.w3.org/2000/svg" shape-rendering="geometricPrecision" text-rendering="geometricPrecision" image-rendering="optimizeQuality" fill-rule="evenodd" clip-rule="evenodd" viewBox="0 0 512 351.67"><path fill-rule="nonzero" d="M0 0h512v23.91H0V0zm0 327.76h512v23.91H0v-23.91zm0-163.88h512v23.91H0v-23.91z"/></svg>
             </div>
