--- a/index.html
+++ b/index.html
@@ -507,7 +507,7 @@
 
     <!-- Templates -->
     <template id="project_template">
-      <div class="group min-w-[300px] md:max-w-[25%] mt-8">
+      <div onclick="open_popup.call(this)" id="project_box" class="group min-w-[300px] md:max-w-[25%] mt-8">
         <img src="/assets/images/project_cover.jpg" class="grayscale group-hover:grayscale-0">
         <div class="flex flex-col gap-y-6 justify-between border relative group-hover:text-black
                     border-t-0 group-hover:border-highlight border-white/40 h-full p-4 md:py-8 cursor-pointer">
@@ -524,12 +524,12 @@
     </template>
 
     <template id="project_popup">
-      <div class="hidden w-full md:h-full bg-black/80 backdrop-filter backdrop-blur-xl
-                            top-0 left-0 absolute
+      <div id="popup_box" class="hidden w-full md:h-full bg-black/80 backdrop-filter backdrop-blur-xl
+                            absolute z-[9999999]
                             flex flex-col rounded-lg
-                            p-8 text-white">
+                            p-16 text-white">
 
-          <div id="popup-close" class="w-full my-2 ">
+          <div onclick="close_popup.call(this)" id="popup-close" class="w-full my-2 ">
             <svg class="fill-white h-10" viewBox="0 0 524 524" style="shape-rendering:geometricPrecision; text-rendering:geometricPrecision; image-rendering:optimizeQuality; fill-rule:evenodd; clip-rule:evenodd" version="1.1" xml:space="preserve" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
               
               <g id="Layer_x0020_1">
@@ -651,6 +651,7 @@
 
     </script>
     
+
     <!-- <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <script>
       AOS.init({
